--- a/main.html
+++ b/main.html
@@ -3,11 +3,88 @@
 <html>
 
 <head>
+<link	href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+
 	<link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
+	
+
+    <div class="container mt-5">
+        <h1 class="text-center">Internship Form</h1>
+        <form class="was-validated" class="row">
+            <div class="row">
+                <div class="col-4">
+                    <label for="firstname">First Name</label>
+                    <input type="text" required id="firstname" class="form-control">
+                    <div class="invalid-feedback">First name required!</div>
+                </div>
+   
+                <div class="col-4">
+                    <label for="lastname">Last Name</label>
+                    <input type="text" required id="lastname" class="form-control">
+                    <div class="invalid-feedback">Last name required!</div>
+                </div>
+   
+                <div class="col-4">
+                    <label for="email">Email Address</label>
+                    <input type="text" required id="email" class="form-control">
+                    <div class="invalid-feedback">Email required!</div>
+                </div>
+
+
+                <div class="col-6 mt-4">
+                    <label for="college">College</label>
+                    <input type="text" required id="college" class="form-control">
+                    <div class="invalid-feedback">
+                        Please provide a valid college name.
+                    </div>
+                </div>
+
+
+                <div class="col-3 mt-4">
+                    <label for="grad">Graduation Year</label>
+                    <select id="grad" class="form-select" required>
+                        <option value="">Choose...</option>
+                        <option value="2022">2022</option>
+                        <option value="2023">2023</option>
+                    </select>
+                    <div class="invalid-feedback">
+                        Please select a valid Graduation year
+                    </div>
+                </div>
+
+
+                <div class="col-3 mt-4">
+                    <label for="roll">Roll Number</label>
+                    <input type="text" id="roll" class="form-control" required>
+                    <div class="invalid-feedback">
+                        Please provide a valid roll no.
+                    </div>
+                </div>
+
+
+                <div class="col-12 mt-4">
+                    <input type="checkbox" label="check" class="form-check-inline checkbox" required>
+
+
+                    <label for="check" class="checkbox-label">Agree to terms and conditions</label>
+                    <div class="invalid-feedback">You must be agree before submitting</div>
+                </div>
+
+
+                <div class="col-3 mt-4">
+                    <button class="btn btn-primary">Submit</button>
+
+
+                </div>
+            </div>
+        </form>
+    </div>
+
     <script type="text/javascript" src="./script.js">
 </script>
 
